--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,3 +45,14 @@
   width: 100%;
   min-height: 100vh;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
